--- a/style/css/photography.css
+++ b/style/css/photography.css
@@ -29,7 +29,7 @@
         grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
         grid-auto-rows: 80px;
         gap: 15px;
-        height: 90vh;
+        height: auto;
         grid-auto-flow: dense;
         width: 100%;
     }
@@ -121,7 +121,6 @@
         background-color: #FF6F61;
     }
     
-    #sample,
     #flowers,
     #betw-alex,
     #sky
