--- a/style/css/style.css
+++ b/style/css/style.css
@@ -95,24 +95,23 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100vh;
+        height: auto;
         justify-content: space-around;
         align-items: center;
-    }
-    
-    header {
         background-color: rgb(26, 26, 38, 97%);
     }
 
     header h3 {
         color: whitesmoke;
         font-size: 9vw;
+        margin-top: 50px;
     }
 
     nav {
         display: flex;
         justify-content: space-around;
-        width: 100%;
+        width: 100%;  
+
     }
 
     nav ul{
@@ -127,10 +126,15 @@
         
     }
 
+    nav ul li:nth-child(1),
     nav ul li:nth-child(2),
     nav ul li:nth-child(3),
     nav ul li:nth-child(4){
         margin-top: 50px;
+    }
+
+    nav ul li:nth-child(4){
+        margin-bottom: 50px;
     }
     
     nav ul li a{
@@ -264,6 +268,7 @@
         left: 20px;
         position: absolute;
         font-size: initial;
+        margin-top: initial;
     }
     
     /* nav ////////////////// */
@@ -273,12 +278,17 @@
     nav ul{
         flex-direction: row;
         width: 50%;
-    }
+    }  
 
+    nav ul li:nth-child(1),
     nav ul li:nth-child(2),
     nav ul li:nth-child(3),
     nav ul li:nth-child(4){
         margin-top: initial;
+    }
+
+    nav ul li:nth-child(4){
+        margin-bottom: initial;
     }
 
     nav ul li a{
@@ -313,10 +323,6 @@
 
     #aboutme hr:nth-child(5) {
         height: 70%;
-    }
-    
-    footer {
-        height: 5vh;    
     }
     
     footer h4{
