--- a/style/css/illustration.css
+++ b/style/css/illustration.css
@@ -74,7 +74,8 @@
     #iris-book,
     #betw,
     #witch-2024,
-    #jenny
+    #jenny,
+    #cyberpunk-girl
      {
         grid-row: span 3;
     }
