--- a/style/css/photography.css
+++ b/style/css/photography.css
@@ -123,7 +123,10 @@
     
     #flowers,
     #betw-alex,
-    #sky
+    #sky,
+    #meduse,
+    #thomas,
+    #fish
     {
         grid-row: span 2;
     }
