--- a/style/css/style.css
+++ b/style/css/style.css
@@ -95,7 +95,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: auto;
+        height: 100vh;
         justify-content: space-around;
         align-items: center;
         background-color: rgb(26, 26, 38, 97%);
@@ -105,6 +105,7 @@
         color: whitesmoke;
         font-size: 9vw;
         margin-top: 50px;
+        text-align: center;
     }
 
     nav {
@@ -128,12 +129,12 @@
 
     nav ul li:nth-child(1),
     nav ul li:nth-child(2),
-    nav ul li:nth-child(3),
-    nav ul li:nth-child(4){
+    nav ul li:nth-child(3)
+    {
         margin-top: 50px;
     }
 
-    nav ul li:nth-child(4){
+    nav ul li:nth-child(3){
         margin-bottom: 50px;
     }
     
@@ -167,22 +168,26 @@
         bottom: 0px;  
     }
 
-    #aboutme h1 {
+    #aboutme h3 {
         color: whitesmoke;
         font-family: "Bebas Neue", sans-serif;
-        font-weight: 200;
+        font-weight: 500;
         font-style: normal;
-        font-size: 40px;
-        writing-mode: vertical-rl;
-        text-orientation: upright;
+        font-size: 30px;
+
     }
     
-    #aboutme h2 {
+    #aboutme h4 {
         color: whitesmoke;
-        font-family: "Bebas Neue", sans-serif;
-        font-weight: 200;
+        font-family: "Roboto", sans-serif;
+        font-weight: bold;
         font-style: normal;
-        font-size: 25px;  
+        font-size: 20px;  
+        
+    }
+      
+    #aboutme h4 br{
+        display: none;
     }
 
     #aboutme hr:nth-child(3) {
@@ -217,27 +222,47 @@
 
 @media all and (min-width:515px) {
 
+    header {
+        height: auto;
+    }
+
     header h3 {
         font-size: 7vw;
     }
 
+    header h3 br {
+        display: none;
+    }
+
     nav ul li a{
         font-size: 5vw;
-  
+    }
+
+    #aboutme {
+        flex-direction: column;
     }
 
     #aboutme img {
         right: -20%;
     }
 
-    #aboutme h1 {
-        font-size: 17vw;
-        writing-mode: horizontal-tb;
-        text-orientation: initial;
+    #aboutme h3 {
+        font-size: 6vw;
     }
     
-    #aboutme h2 {
-        font-size: 6vw;
+    #aboutme h4 {
+        font-size: 2vw;
+    }
+    #aboutme h4 br{
+        display: initial;
+    }
+        
+    #aboutme h3, h4{
+        top: 15vw;
+    }
+
+    footer h4{
+        top: initial;
     }
 
     #aboutme hr:nth-child(3) {
@@ -251,12 +276,7 @@
 
 }
 
-
 @media all and (min-width:1024px) {
-
-    br {
-        display: none;
-    }
 
     header {
         flex-direction: row;
@@ -280,16 +300,6 @@
         width: 50%;
     }  
 
-    nav ul li:nth-child(1),
-    nav ul li:nth-child(2),
-    nav ul li:nth-child(3),
-    nav ul li:nth-child(4){
-        margin-top: initial;
-    }
-
-    nav ul li:nth-child(4){
-        margin-bottom: initial;
-    }
 
     nav ul li a{
         font-size: initial;
@@ -302,16 +312,14 @@
 
     #aboutme {
         height: 95%;
-    }
-    
-    
-    
+    } 
+
     #aboutme img {
         width: 35%;
         right: 0px;
         transition: ease-in-out 0.2s;
     }
-    
+
     #aboutme img:hover {
         filter: saturate(2);
         transition: ease-in-out 0.2s;
@@ -330,10 +338,6 @@
         
     }
     /* Gestions de la couleur rapidement background color */
-    
-
-    
-    
 }
 
 @media screen and (min-width: 1280px) {
